# HabitLens

./: .gitignore  README.md  ideation.md
backend/: client.py  pyproject.toml
backend/habitlens/: config.py  correlation.py  cron_feeder.py  ingestion.py  mock_data_generator.py  notion_api.py  reporting.py  utils.py
backend/habitlens/data/: mock_habits.csv
backend/habitlens/data_preparation/: cleaning.py  habit_feature_engineering.py  ingestion.py
backend/habitlens/tests/: mock_data_generator.py
backend/habitlens/weekly_graph/: graph.py  prompt.py  state.py
backend/habitlens/weekly_graph/schemas/: sorting_algorithm.py  weekly_overview.py
